--- a/form.html
+++ b/form.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <form method="post" action="connect.php">
+    <form method="post" action="index.php">
         Username : <input type="text" name="username"><br><br>
         Password : <input type="password" name="password"><br><br>
         <input type="submit" value="Submit">
